--- a/CS191/preamble.tex
+++ b/CS191/preamble.tex
@@ -10,7 +10,7 @@
 \usepackage{mathrsfs}
 \usepackage[utf8]{inputenc} 
 \usepackage{bbm}
-
+% \usepackage{wasysym}
 \usepackage{array}
 \usepackage{tabstackengine}
 \usepackage{float}
