--- a/CS191/preamble.tex
+++ b/CS191/preamble.tex
@@ -250,7 +250,9 @@
 \DeclareMathOperator{\C}{\mathbb{C}}
 \DeclareMathOperator{\F}{\mathbb{F}}
 \let\O\relax
+\let\H\relax
 \DeclareMathOperator{\O}{\mathcal{O}}
+\DeclareMathOperator{\H}{\mathcal{H}}
 \DeclareMathOperator*{\argmin}{argmin}
 \DeclareMathOperator*{\argmax}{argmax}
 % Commands
