--- a/CS191/lectures.tex
+++ b/CS191/lectures.tex
@@ -16,4 +16,5 @@
     \include{Lectures/lecture11.tex}
     \include{Lectures/lecture12.tex}
     \include{Lectures/lecture13.tex}
+    \include{Lectures/lecture14.tex}
 \end{document}
