--- a/CS191/Lectures/lecture11.tex
+++ b/CS191/Lectures/lecture11.tex
@@ -7,15 +7,15 @@ we can define probabilities $p_i$ of being in a state $\ket{\psi_i}$. Suppose we
 basis, so the probability of measuring $m$ is
 \[ \Pr{m} = \sum_i p_i \Pr{m \mid \ket{\psi_i}} = \sum_i p_i \qty|\braket*{m}{\psi_i}|^2 \]
 But, we can rewrite this quadratic term as a trace:
-\[ \abs{\braket{m}{\psi_i}}^2 = \braket*{\psi_i}{m}\braket*{m}{\psi_i} = \Tr\left(\ket{m}\ketbra*{m}{\psi_i} \bra{\psi_i}\right) \]
+\[ \abs{\braket{m}{\psi_i}}^2 = \braket*{\psi_i}{m}\braket*{m}{\psi_i} = \Tr\left(\ketbra{\psi_i}{\psi_i}\ketbra{m}{m} \right) \]
 Using the fact that trace is linear, we can see:
-\[ \Pr{m} = \Tr\qty(\qty(\sum_i p_i \braket{\psi_i}{\psi_i}) \ketbra{m}{m}) = \Tr(\rho \ketbra{m}{m})\]
+\[ \Pr{m} = \Tr\qty(\qty(\sum_i p_i \ketbra{\psi_i}{\psi_i}) \ketbra{m}{m}) = \Tr(\rho \ketbra{m}{m})\]
 where we define the \textbf{density operator} as:
 \[ \rho = \sum_i p_i \ketbra{\psi_i}{\psi_i} \]
 Note that $\rho$ consists of $d^2$ matrix elements, where $d$ is the dimension of the Hilbert space.
 However, the space of ensembles is infinite-dimensional, because there are an infinite amount of states
 and we can define any probability distribution we'd like on them.
-The reason for this is becuase different ensembles can have the same $\rho$ oeprator.
+The reason for this is because different ensembles can have the same $\rho$ operator.
 
 \begin{example}
     Take the probability distribution $p(\ket{0}) = 0.5$, $p(\ket{1}) = 0.5$, which gives us density
@@ -43,7 +43,7 @@ projector expression. Similarly, the projector $\rho$ has some nice properties.
 We have that
 \[ \rho^{\dagger} = \sum_i p_i \qty(\ketbra{\psi_i}{\psi_i})^{\dagger} = \sum_i p_i \ketbra{\psi_i}{\psi_i} = \rho \]
 Thus, $\rho$ is Hermitian. Furthermore, it is actually positive semi-definite:
-\[ \bra{\psi} \rho \ket{\psi} = \sum_i p_i \qty|\braket{\psi_i}{\psi_i}|^2 \geq 0 \]
+\[ \bra{\psi_i} \rho \ket{\psi_i} = \sum_i p_i \qty|\braket{\psi_i}{\psi_i}|^2 \geq 0 \]
 Thus, its eigenvalues are all nonnegative. Finally, we have that
 \[ \Tr(\rho) = \sum_i p_i = 1 \]
 
