--- a/CS191/Lectures/lecture13.tex
+++ b/CS191/Lectures/lecture13.tex
@@ -74,16 +74,16 @@ We can now send this to Charlie using $N H(\mathbf{\lambda})$ qubits and we're d
 This motivates the following quantum entropy definition (taking operator $\log$ by its infinite series):
 \begin{definition}
     The Von Neumann Entropy of a density matrix $\rho$ is:
-    \[ S(\rho) = -Tr(\rho \log \rho) = - \sum_i \lambda \log \lambda_i\]
+    \[ S(\rho) = -Tr(\rho \log \rho) = - \sum_i \lambda_i \log \lambda_i\]
 \end{definition}
 If we have a pure state $\ket{\Psi} \in \mathcal{H}_A \otimes \mathcal{H}_B$, then $S(\rho_A) = S(\rho_B) = H(\mathbf{\lambda})$, and we term this
 the entanglement entropy.
 
 \subsection{Quantum Channels}
 We've already talked about noisy states and noisy measurement. How can we define a noisy quantum evolution? It turns out it can be described by a few things. Start with
-some state $\rho_A \in \mathcal{H}$.
+some state $\rho_A \in \mathcal{H}_A$.
 \begin{enumerate}
-    \item Take a fixed state $\ket{0} \in \mathcal{H}_A$ and give new state $\rho_A \otimes \ket{0}\bra{0}_X$
+    \item Take a fixed state $\ket{0} \in \mathcal{H}_X$ and give new state $\rho_A \otimes \ket{0}\bra{0}_X$
     \item Take an arbitrary unitary evolution $U_{AX}$ and give new state $U_{AX}\qty(\rho_A \otimes \ketbra{0}) U_{AX}^{\dagger}$.
     \item Write the entire Hilbert space as $\H \simeq \H_A \otimes \H_X \simeq \H_B \otimes \H_E$. Then throw away $\H_E$, yielding
     \[ \rho_B = \tr_E\qty[U_{AX} (\rho_A \otimes \ketbra{0}_X) U_{AX}^{\dagger}] = \mathcal{N}(\rho_A) \]
